--- a/style.css
+++ b/style.css
@@ -40,12 +40,12 @@
 
 body {
   background-color: #dbf0f9;
-  background-image:  linear-gradient(30deg, #ffffff 12%, transparent 12.5%, transparent 87%, #ffffff 87.5%, #ffffff), linear-gradient(150deg, #ffffff 12%, transparent 12.5%, transparent 87%, #ffffff 87.5%, #ffffff), linear-gradient(30deg, #ffffff 12%, transparent 12.5%, transparent 87%, #ffffff 87.5%, #ffffff), linear-gradient(150deg, #ffffff 12%, transparent 12.5%, transparent 87%, #ffffff 87.5%, #ffffff), linear-gradient(60deg, #ffffff77 25%, transparent 25.5%, transparent 75%, #ffffff77 75%, #ffffff77), linear-gradient(60deg, #ffffff77 25%, transparent 25.5%, transparent 75%, #ffffff77 75%, #ffffff77);
+  background-image: linear-gradient(30deg, #ffffff 12%, transparent 12.5%, transparent 87%, #ffffff 87.5%, #ffffff), linear-gradient(150deg, #ffffff 12%, transparent 12.5%, transparent 87%, #ffffff 87.5%, #ffffff), linear-gradient(30deg, #ffffff 12%, transparent 12.5%, transparent 87%, #ffffff 87.5%, #ffffff), linear-gradient(150deg, #ffffff 12%, transparent 12.5%, transparent 87%, #ffffff 87.5%, #ffffff), linear-gradient(60deg, #ffffff77 25%, transparent 25.5%, transparent 75%, #ffffff77 75%, #ffffff77), linear-gradient(60deg, #ffffff77 25%, transparent 25.5%, transparent 75%, #ffffff77 75%, #ffffff77);
   background-size: 80px 140px;
   background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;
   font-family: "WorkSans-Regular", sans-serif;
-  font-size: 20px;
   transition: 0.5s;
+  font-size: 20px;
   text-align: center;
 }
 
@@ -54,12 +54,19 @@ body {
 #title {}
 
 .navbar {
-  padding: 1% 3%;
+  padding: 12px 40px;
+}
+
+@media only screen and (max-width: 991px) {
+  .navbar {
+    padding: 14px 40px;
+  }
 }
 
 .clicked {
   cursor: pointer;
   text-shadow: white 0 0 5px, white 0 0 10px, white 0 0 0.2rem;
+  /* text-shadow: white 0 0 5px, yellow 0 0 10px, yellow 0 0 0.2rem; */
 }
 
 .navbar-brand {
@@ -68,10 +75,10 @@ body {
 
 .nav-item {
   padding-left: 4vw;
+  font-family: "WorkSans-Regular", sans-serif;
 }
 
 .nav-link {
-  font-family: "WorkSans-Light", sans-serif;
   transition: 0.5s;
 }
 
@@ -163,6 +170,7 @@ h2 {
 
 .collapsible:hover {
   text-shadow: white 0 0 5px, white 0 0 10px, white 0 0 0.2rem;
+  /* text-shadow: white 0 0 5px, yellow 0 0 10px, yellow 0 0 0.2rem; */
 }
 
 .greenGradient {
